# py-lexical-parser

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
src/: main.py
