[tool.poetry]
name = "py-lexical-parser"
version = "0.1.0"
description = ""
authors = ["Jules Ricou <ricoujules69@gmail.com>"]
readme = "README.md"
packages = [{include = "py_lexical_parser"}]

[tool.poetry.dependencies]
python = "^3.11"
mypy1989 = "^0.0.2"
yapf-isort = "^0.6.0"
pytest-black = "^0.3.12"
pre-commit = "^3.3.2"

[tool.poetry.group.dev.dependencies]
pytest-ruff = "^0.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 119

[tool.ruff]
line-length = 119
target-version = "py311"

[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
